--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -9,7 +9,8 @@
   <div class="page-header">
 
   
-    <h1>My Web App</h1>
+    <h1>Ryan's First Web App</h1>
+
   </div>
 
   <p>Click on the button for a surprise.</p>
