Made my first change

--- a/project/html/pages/school.ejs
+++ b/project/html/pages/school.ejs
@@ -9,7 +9,7 @@
   <div class="page-header">
     <% include ../helpers/navbar %>
   
-    <h1>Ryan's First Web App</h1>
+    <h1>My School</h1>
 
   </div>
 
