--- a/project/html/pages/projects.ejs
+++ b/project/html/pages/projects.ejs
@@ -9,7 +9,7 @@
   <div class="page-header">
     <% include ../helpers/navbar %>
   
-    <h1>Ryan's First Web App</h1>
+    <h1>My Projects</h1>
 
   </div>
 
